<resources>
    <string name="app_name">My Application</string>
    <string name="textview">Display</string>
    <string name="button">左</string>
    <string name="button2">右</string>
    <string name="switch1">开关</string>
    <string name="button3">确认</string>
    <string name="editText">请输入数字</string>
    <string name="radiobutton1">apple</string>
    <string name="radiobutton2">android</string>
    <string name="imageView1">image</string>
    <string name="checkbox1">语文</string>
    <string name="checkbox2">数学</string>
    <string name="checkbox3">英语</string>
</resources>